# ceyhan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  release.bat
lib/sakarya/platform/: windows.sey
seyhan/lib/sakarya/: build.bat  ceyhan.json
seyhan/lib/sakarya/native/: CMakeLists.txt  build.bat  clean.bat  configure.bat
seyhan/lib/sakarya/native/sources/: windows.c
seyhan/lib/sakarya/sources/: platform.sey  windows.c  windows.sey
seyhan/tests/ExitWith2/: ceyhan.json
seyhan/tests/ExitWith2/sources/: main.sey
seyhan/tests/runnable/EmptyEntrypoint/: ceyhan.json
seyhan/tests/runnable/exit_with_0/sources/: main.sey
sources/: ceyhan.h  core.c  main.c  tester.c
src/: cey.h  cey_debug.c  cey_main.c
tests/runnable/exit_with_0/src/: main.sey
